sfdx-source/SmartVisca/main/default/objects/SmartViscaUserConfig__c/SmartViscaUserConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>ユーザ設定の初期値</description>
    <label>SmartViscaユーザ設定</label>
</CustomObject>