sfdx-source/SmartVisca/main/default/objects/SmartViscaUserConfig__c/fields/PackageVersion__c.field-meta.xml
<CustomField>
    <fullName>PackageVersion__c</fullName>
    <label>PackageVersion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>