sfdx-source/SmartVisca/main/default/objects/SmartViscaUserConfig__c/fields/SvcDoubleSide__c.field-meta.xml
<CustomField>
    <fullName>SvcDoubleSide__c</fullName>
    <defaultValue>true</defaultValue>
    <description>doubleSide</description>
    <label>SmartViscaカメラ:裏面も撮る</label>
    <type>Checkbox</type>
</CustomField>