sfdx-source/SmartVisca/main/default/objects/SmartViscaUserConfig__c/fields/SvcFreehandMemo__c.field-meta.xml
<CustomField>
    <fullName>SvcFreehandMemo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SmartViscaカメラ:手書きメモをデジタル化する（表面のみ）</label>
    <type>Checkbox</type>
</CustomField>