sfdx-source/SmartVisca/main/default/objects/SmartViscaUserConfig__c/fields/SvcFrontOnly__c.field-meta.xml
<CustomField>
    <fullName>SvcFrontOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SmartViscaカメラ:表面のみをデジタル化する</label>
    <type>Checkbox</type>
</CustomField>