sfdx-source/SmartVisca/main/default/objects/SmartViscaUserConfig__c/fields/SvcGabageFilter__c.field-meta.xml
<CustomField>
    <fullName>SvcGabageFilter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>画像補正で陰影の除去のあと、ゴミを除去する。</description>
    <label>SmartViscaカメラ:陰影除去後、さらにゴミを取る</label>
    <type>Checkbox</type>
</CustomField>