sfdx-source/SmartVisca/main/default/objects/SmartViscaUserConfig__c/fields/SvcLastListName__c.field-meta.xml
<CustomField>
    <fullName>SvcLastListName__c</fullName>
    <label>SmartViscaカメラ:前回のリスト名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>