sfdx-source/SmartVisca/main/default/objects/SmartViscaUserConfig__c/fields/SvcNoiseFilter__c.field-meta.xml
<CustomField>
    <fullName>SvcNoiseFilter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>画像補正で陰影の除去のあと、ゴマ塩ノイズを除去する。</description>
    <label>SmartViscaカメラ:陰影除去後のゴミを取る</label>
    <type>Checkbox</type>
</CustomField>