sfdx-source/SmartVisca/main/default/objects/SmartViscaUserConfig__c/fields/SvcRepeatMemo__c.field-meta.xml
<CustomField>
    <fullName>SvcRepeatMemo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SmartViscaカメラ:メモを引き継ぐ</label>
    <type>Checkbox</type>
</CustomField>