sfdx-source/SmartVisca/main/default/objects/SmartViscaUserConfig__c/fields/SvcShadeFilter__c.field-meta.xml
<CustomField>
    <fullName>SvcShadeFilter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>画像補正で矩形抽出に加えて、陰影の除去を行う。</description>
    <label>SmartViscaカメラ:陰影を除去する</label>
    <type>Checkbox</type>
</CustomField>