sfdx-source/SmartVisca/main/default/objects/SmartViscaUserConfig__c/fields/SvcShowTranslateFailure__c.field-meta.xml
<CustomField>
    <fullName>SvcShowTranslateFailure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SmartViscaカメラ:画像補正の失敗を表示する</label>
    <type>Checkbox</type>
</CustomField>