sfdx-source/SmartVisca/main/default/objects/SmartViscaUserConfig__c/fields/SvInitialListView__c.field-meta.xml
<CustomField>
    <fullName>SvInitialListView__c</fullName>
    <defaultValue>0</defaultValue>
    <description>SmartVisca タブで初期表示するリスト
1:あなたの名刺
2:会社の名刺
0、その他: 最後に開いたページ</description>
    <label>SmartVisca:初期リスト</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>